*OLD* depsgraph - Softbody not evaluated on lattice? ('physics/sofbody_curve_lattice.blend' regression file) #45247

Closed
opened 2015-06-30 12:12:08 +02:00 by Bastien Montagne · 5 comments

Start Blender with OLD depsgraph, open physics/sofbody_curve_lattice.blend regression file, hit alt-A. The lattice around the monkey is not 'softbodied', it remains rigid.

Not that this is not regression, we have same behavior in 2.74 at least.

Oddly enough, when started with new depsgraph, the lattice deforms as expected! It shows issues with curves though (flickering similar to #45238).

Start Blender with *OLD* depsgraph, open `physics/sofbody_curve_lattice.blend` regression file, hit `alt-A`. The lattice around the monkey is not 'softbodied', it remains rigid. Not that this is not regression, we have same behavior in 2.74 at least. Oddly enough, when started with *new* depsgraph, the lattice deforms as expected! It shows issues with curves though (flickering similar to #45238).
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Bastien Montagne 2015-06-30 12:12:08 +02:00
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29

This became changed inbetween of 2.63 and 2.64, to be precise it's a1091fb. Would first need to verify which behavior is correct in this example. Might be just so #26876 is not corretc with the new depsgraph.

Wouldn't consider this a stopper for 2.75 and will switch to making last ajustments to the release branch and calling AHOY.

This became changed inbetween of 2.63 and 2.64, to be precise it's a1091fb. Would first need to verify which behavior is correct in this example. Might be just so #26876 is not corretc with the new depsgraph. Wouldn't consider this a stopper for 2.75 and will switch to making last ajustments to the release branch and calling AHOY.

This issue was referenced by eee2d8e45c

This issue was referenced by eee2d8e45c4fda2adf8149cefa8ce6899775b81f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45247
No description provided.