Fix T45247: Softbody ignores lattice weight

Now multiply the lattice wight by the goal weight too.